--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             50     79.37%*
+				updated:             51     80.95%*
 				kind-of updated:     9      14.29%*
 				kind-of outdated:    1       1.59%
-				outdated:            3       4.76%
+				outdated:            2       3.17%
 			-->
-			<div class="updated" style="width:79%"></div>
+			<div class="updated" style="width:81%"></div>
 			<div class="kindof-updated" style="width:14%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:5%"></div>
+			<div class="outdated" style="width:3%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -278,7 +278,7 @@
 				<p>Dynamic lighting.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="more-culling">
