replace vanadium with polytone

--- a/mods.html
+++ b/mods.html
@@ -422,18 +422,18 @@
 				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
-		<div class="mod" id="vanadium">
+		<div class="mod" id="polytone">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/lS2PKjpV/a10b53fd4072c138bd112040121c9b7d72de5338.png" />
+				<img src="https://cdn.modrinth.com/data/3qAYkBMB/828636188cd2427eb1158dd1e0bddd42d318ccbf_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/vanadium" target="_blank">Vanadium</a>
+					<a href="https://modrinth.com/mod/polytone" target="_blank">Polytone</a>
 				</h3>
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Other Performance Enhancements</h2>
