--- a/mods.html
+++ b/mods.html
@@ -190,16 +190,16 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          63    100.00%
-				updated:             52     82.54%*
-				kind-of updated:     9      14.29%*
-				kind-of outdated:    1       1.59%
-				outdated:            1       1.59%
+				total mods:          64    100.00%
+				updated:             53     82.81%
+				kind-of updated:     9      14.06%
+				kind-of outdated:    1       1.56%
+				outdated:            1       1.56%
 			-->
-			<div class="updated" style="width:82%"></div>
+			<div class="updated" style="width:83%"></div>
 			<div class="kindof-updated" style="width:14%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:2%"></div>
+			<div class="outdated" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -675,6 +675,20 @@
 					<a href="https://modrinth.com/mod/better-mount-hud" target="_blank">Better Mount HUD</a>
 				</h3>
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
+			</div>
+		</div>
+		<div class="mod" id="blur-plus">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/NK39zBp2/1bb976c95042f20f26e27e6c4eb9e359e45d5002.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/blur-plus" target="_blank">Blur+</a>
+				</h3>
+				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.1</span>
