--- a/mods.html
+++ b/mods.html
@@ -1046,7 +1046,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
+				<p>Required when using <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="#more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
@@ -1060,7 +1060,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, and <a href="#smooth-swapping">Smooth Swapping</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.3</span>
