some more corrections

--- a/mods.html
+++ b/mods.html
@@ -1046,7 +1046,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required when using <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="#more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
+				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
