--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             18     28.57%
+				updated:             19     30.16%
 				kind-of updated:     1       1.59%
 				kind-of outdated:    0       0.00%
-				outdated:            1      69.84%
+				outdated:            43      68.25%
 			-->
-			<div class="updated" style="width:28%"></div>
+			<div class="updated" style="width:30%"></div>
 			<div class="kindof-updated" style="width:2%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:70%"></div>
+			<div class="outdated" style="width:68%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -419,7 +419,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
