--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             19     30.16%
+				updated:             21     33.33%
 				kind-of updated:     1       1.59%
 				kind-of outdated:    0       0.00%
-				outdated:            43      68.25%
+				outdated:            41      65.08%
 			-->
-			<div class="updated" style="width:30%"></div>
+			<div class="updated" style="width:33%"></div>
 			<div class="kindof-updated" style="width:2%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:68%"></div>
+			<div class="outdated" style="width:65%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -362,7 +362,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -376,7 +376,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes">
