--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             27     42.86%
-				kind-of updated:     1       1.59%
+				updated:             31     49.21%
+				kind-of updated:     0       1.59%
 				kind-of outdated:    0       0.00%
-				outdated:            35      55.56%
+				outdated:            32      50.79%
 			-->
-			<div class="updated" style="width:43%"></div>
-			<div class="kindof-updated" style="width:2%"></div>
+			<div class="updated" style="width:49%"></div>
+			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:55%"></div>
+			<div class="outdated" style="width:51%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -533,7 +533,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
@@ -757,13 +757,12 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/YoungSoulluoS/Smooth-Swapping-1.20.4-Port/releases/tag/1.21-Fabric" target="_blank">Smooth Swapping</a>
+					<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Smooth Swapping</a>
 				</h3>
 				<p>Adds a smooth animation when moving items between containers.</p>
-				<p><i>(<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
@@ -1033,7 +1032,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1049,7 +1048,7 @@
 				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
