--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             31     49.21%
-				kind-of updated:     0       1.59%
+				updated:             32     50.79%
+				kind-of updated:     1       1.59%
 				kind-of outdated:    0       0.00%
-				outdated:            32      50.79%
+				outdated:            30      47.62%
 			-->
-			<div class="updated" style="width:49%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
+			<div class="updated" style="width:51%"></div>
+			<div class="kindof-updated" style="width:1%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:51%"></div>
+			<div class="outdated" style="width:48%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -477,7 +477,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -918,7 +918,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
