--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             35     55.56%
-				kind-of updated:     0       1.59%
+				updated:             37     58.73%
+				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            28      44.44%
+				outdated:            26      41.27%
 			-->
-			<div class="updated" style="width:56%"></div>
+			<div class="updated" style="width:59%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:44%"></div>
+			<div class="outdated" style="width:41%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -561,7 +561,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -948,7 +948,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1067,7 +1067,7 @@
 		</div>
 		<div class="mod" id="fabric-language-kotlin">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/Ha28R6CL/icon.png" />
+				<img src="https://cdn.modrinth.com/data/Ha28R6CL/72c3d74aeb665e45aea93a945a01474cbce3b7da_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
