--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             37     58.73%
+				updated:             38     60.32%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            26      41.27%
+				outdated:            25      39.68%
 			-->
-			<div class="updated" style="width:59%"></div>
+			<div class="updated" style="width:60%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:41%"></div>
+			<div class="outdated" style="width:40%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -677,7 +677,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
