--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             38     60.32%
+				updated:             41     65.08%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            25      39.68%
+				outdated:            22      34.92%
 			-->
-			<div class="updated" style="width:60%"></div>
+			<div class="updated" style="width:65%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:40%"></div>
+			<div class="outdated" style="width:35%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -547,7 +547,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
@@ -748,7 +748,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
@@ -818,7 +818,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
