--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             41     65.08%
+				updated:             42     66.67%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            22      34.92%
+				outdated:            21      33.33%
 			-->
-			<div class="updated" style="width:65%"></div>
+			<div class="updated" style="width:67%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:35%"></div>
+			<div class="outdated" style="width:33%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -720,7 +720,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
