modernfix likely to be removed soon

--- a/mods.html
+++ b/mods.html
@@ -608,7 +608,7 @@
 				<span class="outdated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
-		<div class="mod" id="modern-fix">
+		<div class="mod" id="modernfix">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/nmDcB62a/e1d2433476995be1b1a94ff1afaf6167752274ae.png" />
 			</div>
@@ -617,6 +617,7 @@
 					<a href="https://modrinth.com/mod/modernfix" target="_blank">ModernFix</a>
 				</h3>
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
+				<p><i>Will likely be removed from this list in the near future, as the project has unofficially been abandoned. The author has said that he has no motivation to update it to 1.21.2 and beyond.</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="outdated"><span class="circle"></span> 1.21.1</span>
