--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             42     69.84%
+				updated:             45     71.43%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            19      30.16%
+				outdated:            18      28.57%
 			-->
-			<div class="updated" style="width:70%"></div>
+			<div class="updated" style="width:71%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:30%"></div>
+			<div class="outdated" style="width:29%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -591,7 +591,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="model-gap-fix">
