--- a/mods.html
+++ b/mods.html
@@ -192,14 +192,14 @@
 			<!--
 				total mods:          63    100.00%
 				updated:             45     71.43%
-				kind-of updated:     0       0.00%
+				kind-of updated:     2       3.17%
 				kind-of outdated:    0       0.00%
-				outdated:            18      28.57%
+				outdated:            16     25.40%
 			-->
-			<div class="updated" style="width:71%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
+			<div class="updated" style="width:72%"></div>
+			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:29%"></div>
+			<div class="outdated" style="width:25%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -315,12 +315,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/animatica" target="_blank">Animatica</a>
+					<a href="https://github.com/Rektroth/Animatica/releases/tag/0.6.1%2B1.21.2" target="_blank">Animatica</a>
 				</h3>
 				<p>Implements the OptiFine animated texture format.</p>
+				<p><i>(<a href="https://modrinth.com/mod/animatica" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
 			</div>
 		</div>
 		<div class="mod" id="cit-resewn">
@@ -458,12 +459,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/ebe" target="_blank">Enhanced Block Entities</a>
+					<a href="https://github.com/Rektroth/EnhancedBlockEntities/releases/tag/0.10.2%2B1.21.2" target="_blank">Enhanced Block Entities</a>
 				</h3>
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
+				<p><i>(<a href="https://modrinth.com/mod/ebe" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.2</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
