new image for dnyamic lights

--- a/mods.html
+++ b/mods.html
@@ -269,7 +269,7 @@
 		</div>
 		<div class="mod" id="lambdynamiclights">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/yBW8D80W/icon.png" />
+				<img src="https://cdn.modrinth.com/data/yBW8D80W/d4f5c3ff8df7caf024178b04eca6d69f95979cfe_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
