--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             16     25.40%
+				updated:             17     26.98%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            47     74.60%
+				outdated:            46     73.02%
 			-->
-			<div class="updated" style="width:25%"></div>
+			<div class="updated" style="width:27%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:75%"></div>
+			<div class="outdated" style="width:73%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -636,7 +636,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
