--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             17     26.98%
+				updated:             23     36.51%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            46     73.02%
+				outdated:            40     63.49%
 			-->
-			<div class="updated" style="width:27%"></div>
+			<div class="updated" style="width:37%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:73%"></div>
+			<div class="outdated" style="width:63%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -236,7 +236,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -250,7 +250,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -349,7 +349,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="outdated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -807,7 +807,7 @@
 				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -865,7 +865,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -879,7 +879,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -1007,7 +1007,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="morechathistory">
