--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             23     36.51%
+				updated:             25     39.68%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            40     63.49%
+				outdated:            38     60.32%
 			-->
-			<div class="updated" style="width:37%"></div>
+			<div class="updated" style="width:40%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:63%"></div>
+			<div class="outdated" style="width:60%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -420,7 +420,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -779,7 +779,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
