--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             25     39.68%
+				updated:             32     50.79%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            38     60.32%
+				outdated:            31     49.21%
 			-->
-			<div class="updated" style="width:40%"></div>
+			<div class="updated" style="width:51%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:60%"></div>
+			<div class="outdated" style="width:49%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -479,7 +479,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -652,7 +652,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -821,7 +821,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -921,7 +921,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -965,7 +965,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="cherished-worlds">
@@ -1035,7 +1035,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1051,7 +1051,7 @@
 				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
