--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             32     50.79%
+				updated:             34     53.97%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            31     49.21%
+				outdated:            29     46.03%
 			-->
-			<div class="updated" style="width:51%"></div>
+			<div class="updated" style="width:54%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:49%"></div>
+			<div class="outdated" style="width:46%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -493,7 +493,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -951,7 +951,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
