--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             34     53.97%
+				updated:             36     57.14%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            29     46.03%
+				outdated:            27     42.86%
 			-->
-			<div class="updated" style="width:54%"></div>
+			<div class="updated" style="width:57%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:46%"></div>
+			<div class="outdated" style="width:43%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -607,7 +607,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="modernfix">
@@ -680,7 +680,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
