--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             39     61.90%
+				updated:             40     63.49%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            24     38.10%
+				outdated:            23     36.51%
 			-->
-			<div class="updated" style="width:62%"></div>
+			<div class="updated" style="width:63%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:38%"></div>
+			<div class="outdated" style="width:37%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -751,7 +751,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
