--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             40     63.49%
+				updated:             41     65.08%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            23     36.51%
+				outdated:            22     34.92%
 			-->
-			<div class="updated" style="width:63%"></div>
+			<div class="updated" style="width:65%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:37%"></div>
+			<div class="outdated" style="width:35%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -666,7 +666,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="blur-plus">
