--- a/mods.html
+++ b/mods.html
@@ -191,15 +191,15 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             42     66.67%
+				updated:             43     68.25%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            21     33.33%
+				outdated:            20     31.75%
 			-->
-			<div class="updated" style="width:67%"></div>
+			<div class="updated" style="width:68%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:33%"></div>
+			<div class="outdated" style="width:32%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -993,7 +993,7 @@
 				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
