dcch now on modrinth

--- a/mods.html
+++ b/mods.html
@@ -988,7 +988,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/dont-clear-chat-history" target="_blank">Don't Clear Chat History</a>
+					<a href="https://modrinth.com/mod/dcch" target="_blank">Don't Clear Chat History</a>
 				</h3>
 				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
 			</div>
