--- a/mods.html
+++ b/mods.html
@@ -192,14 +192,14 @@
 			<!--
 				total mods:          63    100.00%
 				updated:             44     69.84%
-				kind-of updated:     0       0.00%
-				kind-of outdated:    0       0.00%
-				outdated:            19     30.16%
+				kind-of updated:     4       6.35%
+				kind-of outdated:    1       1.59%
+				outdated:            14     22.22%
 			-->
 			<div class="updated" style="width:70%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
-			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:30%"></div>
+			<div class="kindof-updated" style="width:6%"></div>
+			<div class="kindof-outdated" style="width:2%"></div>
+			<div class="outdated" style="width:22%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -695,7 +695,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="effective">
@@ -765,7 +765,7 @@
 				<p>Adds a smooth animation when moving items between containers.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
@@ -837,7 +837,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
@@ -907,7 +907,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
@@ -937,7 +937,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
