cherished worlds to be removed soon

--- a/mods.html
+++ b/mods.html
@@ -977,6 +977,7 @@
 					<a href="https://modrinth.com/mod/cherished-worlds" target="_blank">Cherished Worlds</a>
 				</h3>
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
+				<p><i>Will likely be removed from this list in the near future, as the project has unofficially been abandoned. The author has said that they have no intention of updating it to 1.21.2 and beyond.</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="outdated"><span class="circle"></span> 1.21.1</span>
