--- a/mods.html
+++ b/mods.html
@@ -198,17 +198,17 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          63    100.00%
-				updated:             44     69.84%
-				kind-of updated:     4       6.35%
-				kind-of outdated:    1       1.59%
-				outdated:            12     19.05%
-				abandoned:           2       3.17%
+				total mods:          66    100.00%
+				updated:             47     71.21%
+				kind-of updated:     4       6.06%
+				kind-of outdated:    1       1.51%
+				outdated:            12     18.18%
+				abandoned:           2       3.03%
 			-->
-			<div class="updated" style="width:70%"></div>
+			<div class="updated" style="width:71%"></div>
 			<div class="kindof-updated" style="width:6%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:19%"></div>
+			<div class="outdated" style="width:18%"></div>
 			<div class="abandoned" style="width:3%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -792,6 +792,34 @@
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
+		<div class="mod" id="sounds">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/ZouiUX7t/b6ae84ea14654245f58856722473afeddf72360c_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/sound" target="_blank">Sounds</a>
+				</h3>
+				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="status-effect-bars">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/x02cBj9Y/7ee93fac37512f4f04aa82f15deada7b2ca9269f.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/status-effect-bars" target="_blank">Status Effect Bars</a>
+				</h3>
+				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
 		<div class="mod" id="tiny-item-animations">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/wMkevcSR/cefe2f7923e57980cb27671c948ac3393e55a4e9.png" />
@@ -1101,6 +1129,20 @@
 					<a href="https://github.com/sakura-ryoko/malilib/releases/" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="mru">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/SNVQ2c0g/82339bfc8a0a3a6a3c376f5c29555a378379cfa0_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/mru" target="_blank">M.R.U.</a>
+				</h3>
+				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
