--- a/mods.html
+++ b/mods.html
@@ -199,16 +199,16 @@
 		<div class="progress">
 			<!--
 				total mods:          66    100.00%
-				updated:             48     72.73%
+				updated:             49     74.24%
 				kind-of updated:     4       6.06%
 				kind-of outdated:    1       1.51%
-				outdated:            11     16.67%
+				outdated:            10     15.15%
 				abandoned:           2       3.03%
 			-->
-			<div class="updated" style="width:73%"></div>
+			<div class="updated" style="width:74%"></div>
 			<div class="kindof-updated" style="width:6%"></div>
-			<div class="kindof-outdated" style="width:1%"></div>
-			<div class="outdated" style="width:17%"></div>
+			<div class="kindof-outdated" style="width:2%"></div>
+			<div class="outdated" style="width:15%"></div>
 			<div class="abandoned" style="width:3%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -747,7 +747,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-scroll">
