kotlin required by zoomify

--- a/mods.html
+++ b/mods.html
@@ -1114,7 +1114,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-language-kotlin" target="_blank">Fabric Language Kotlin</a>
 				</h3>
-				<p>Required by <a href="#optigui">OptiGUI</a>.</p>
+				<p>Required by <a href="#optigui">OptiGUI</a> and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
