--- a/mods.html
+++ b/mods.html
@@ -199,17 +199,17 @@
 		<div class="progress">
 			<!--
 				total mods:          66    100.00%
-				updated:             49     74.24%
+				updated:             50     75.76%
 				kind-of updated:     4       6.06%
-				kind-of outdated:    1       1.51%
+				kind-of outdated:    1       1.52%
 				outdated:            10     15.15%
-				abandoned:           2       3.03%
+				abandoned:           1       1.52%
 			-->
-			<div class="updated" style="width:74%"></div>
+			<div class="updated" style="width:76%"></div>
 			<div class="kindof-updated" style="width:6%"></div>
-			<div class="kindof-outdated" style="width:2%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:15%"></div>
-			<div class="abandoned" style="width:3%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -632,7 +632,7 @@
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="abandoned"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
