--- a/mods.html
+++ b/mods.html
@@ -199,16 +199,16 @@
 		<div class="progress">
 			<!--
 				total mods:          66    100.00%
-				updated:             50     75.76%
+				updated:             51     77.27%
 				kind-of updated:     4       6.06%
 				kind-of outdated:    1       1.52%
-				outdated:            10     15.15%
+				outdated:            9      13.64%
 				abandoned:           1       1.52%
 			-->
-			<div class="updated" style="width:76%"></div>
+			<div class="updated" style="width:77%"></div>
 			<div class="kindof-updated" style="width:6%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:15%"></div>
+			<div class="outdated" style="width:14%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -360,7 +360,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
