replace effective with particular

--- a/mods.html
+++ b/mods.html
@@ -198,17 +198,17 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          66    100.00%
-				updated:             51     77.27%
-				kind-of updated:     4       6.06%
-				kind-of outdated:    1       1.52%
-				outdated:            9      13.64%
-				abandoned:           1       1.52%
+				total mods:          67    100.00%
+				updated:             53     79.10%
+				kind-of updated:     4       5.97%
+				kind-of outdated:    1       1.49%
+				outdated:            8      11.94%
+				abandoned:           1       1.49%
 			-->
-			<div class="updated" style="width:77%"></div>
+			<div class="updated" style="width:79%"></div>
 			<div class="kindof-updated" style="width:6%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:14%"></div>
+			<div class="outdated" style="width:12%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -702,24 +702,10 @@
 					<a href="https://github.com/Rektroth/DripSounds-Fabric/releases/tag/1.21" target="_blank">Drip Sounds</a>
 				</h3>
 				<p>Adds sounds for drip particles landing.</p>
-				<p><i>(<a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Official</a> mod appears abandoned.)</i></p>
+				<p><i>(<a href="https://modrinth.com/mod/dripsounds" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
-			</div>
-		</div>
-		<div class="mod" id="effective">
-			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/pcPXJeZi/e08c4dd358a06dc90619e3b8d96883e86c950211.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/effective" target="_blank">Effective</a>
-				</h3>
-				<p>Adds water/lava cascade and entity splash visuals and sounds.</p>
-			</div>
-			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.1</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -745,6 +731,20 @@
 					<a href="https://modrinth.com/mod/paginatedadvancements" target="_blank">Paginated Advancements</a>
 				</h3>
 				<p>Overhauls the advancements screen.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="particular">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/B1CcCd9h/1764f9ce329d9e87a6e043d0f3eb68bb1855c0cf_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/particular" target="_blank">Particular</a>
+				</h3>
+				<p>Enhances Minecraft's ambience with hand-crafted visual effects.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
@@ -1143,6 +1143,20 @@
 					<a href="https://modrinth.com/mod/mru" target="_blank">M.R.U.</a>
 				</h3>
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="owo">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/ccKDOlHs/42c9fe358c72dd5afda078271c574c325e963d19_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/owo-lib" target="_blank">oωo</a>
+				</h3>
+				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
