add better stats screen

--- a/mods.html
+++ b/mods.html
@@ -992,6 +992,20 @@
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
+		<div class="mod" id="better-statistics-screen">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/n6PXGAoM/c5a85914f01be35575abe61c2d19d48e08581034_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/better-stats" target="_blank">Better Statistics Screen</a>
+				</h3>
+				<p>Improves the statistics screen.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
 		<div class="mod" id="chat-heads">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/Wb5oqrBJ/icon.png" />
@@ -1157,6 +1171,20 @@
 					<a href="https://modrinth.com/mod/owo-lib" target="_blank">oωo</a>
 				</h3>
 				<p>Required by <a href="#particular">Particular</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="tcdcommons-api">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/Eldc1g37/36f2c7c76a7fc63e827bc20657853b7f1d9e4060.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/tcdcommons" target="_blank">TCDCommons API</a>
+				</h3>
+				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
