--- a/mods.html
+++ b/mods.html
@@ -199,17 +199,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             55     79.71%
-				kind-of updated:     4       5.80%
+				updated:             56     81.16%
+				kind-of updated:     5       7.25%
 				kind-of outdated:    1       1.45%
-				outdated:            8      11.59%
+				outdated:            6       8.70%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:80%"></div>
-			<div class="kindof-updated" style="width:6%"></div>
-			<div class="kindof-outdated" style="width:1%"></div>
-			<div class="outdated" style="width:12%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="updated" style="width:81%"></div>
+			<div class="kindof-updated" style="width:7%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="outdated" style="width:9%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -326,13 +326,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Rektroth/Animatica/releases/tag/0.6.1%2B1.21.2" target="_blank">Animatica</a>
+					<a href="https://github.com/Rektroth/Animatica/releases/tag/0.6.2%2B1.21.4" target="_blank">Animatica</a>
 				</h3>
 				<p>Implements the OptiFine animated texture format.</p>
 				<p><i>(<a href="https://modrinth.com/mod/animatica" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.2</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="cit-resewn">
@@ -826,12 +826,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Tiny Item Animations</a>
+					<a href="https://github.com/Rektroth/Tiny-Item-Animations/releases/tag/1.2.1-1.21.3" target="_blank">Tiny Item Animations</a>
 				</h3>
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
+				<p><i>(<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
 			</div>
 		</div>
 		<div class="mod" id="visuality">
